# xpectral-research

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-15-repo-scaffolding.md
docs/superpowers/specs/: 2026-07-15-repo-scaffolding-design.md
notebooks/: 001_confounding_factors.ipynb  001_setup_check.ipynb
notebooks/002_nothing_to_see_here/scripts/: nothing_to_see_here.py
