[project]
name = "xpectral-research"
version = "0.1.0"
description = "Notebook-driven quant/data-science research"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "xpectral-quant>=1.0.1",
    "xpectral-chart>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pre-commit>=4.4.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # Line too long — handled by formatter, not linter
]

[tool.ruff.lint.isort]
known-first-party = ["xpectral"]
