[project]
name = "xpectral-research"
version = "0.1.0"
description = "Notebook-driven quant/data-science research"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "xpectral-quant>=1.0.1",
    "xpectral-chart>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6",                      # code formatter and linter
    "pre-commit>=4.4.0",              # git hook manager
]

[tool.uv]
package = false

# local checkouts installed editable so changes there are picked up without
# reinstalling or bumping a version; requires the sibling repos to exist at
# ../xpectral-quant and ../xpectral-chart, otherwise `uv sync` errors (no PyPI fallback)
[tool.uv.sources]
xpectral-quant = { path = "../xpectral-quant", editable = true }
xpectral-chart = { path = "../xpectral-chart", editable = true }

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # Line too long — handled by formatter, not linter
]

[tool.ruff.lint.isort]
known-first-party = ["xpectral"]
